# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neosca"
dynamic = ["version"]
license = {text = "GNU GPLv3"}
authors = [{"name" = "Tan, Long", "email" = "tanloong@foxmail.com"},]
description = "Fork of L2SCA and LCA"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["L2SCA", "Syntactic Complexity", "LCA", "Lexical Complexity", "Constituency Parsing", "Tregex", "Corpus Linguistics"]
classifiers=[
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: MacOS",
        "Operating System :: POSIX :: Linux",
        "Operating System :: Microsoft :: Windows",
    ]
dependencies = [
    "charset_normalizer>=3.3.2",
    "openpyxl>=3.1.2",
    "pyinstaller>=6.1.0",
    "pyside6-essentials>=6.6.1",
    "stanza>=1.8.1",
]

[project.urls]
Homepage = "https://github.com/tanloong/neosca"
# Documentation = "https://readthedocs.org"
Issues = "https://github.com/tanloong/neosca/issues"
Changelog = "https://github.com/tanloong/neosca/blob/master/CHANGELOG.md"

[project.scripts]
nsca = "neosca.ns_main_cli:main_cli"
nsca-lca = "neosca.ns_lca.main:lca_main"

[tool.setuptools.dynamic]
version = {attr = "neosca.ns_about.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neosca = ["ns_data/*"]

[tool.setuptools.exclude-package-data]
neosca = [
"ns_data/stanza_resources/en/depparse",
"ns_data/stanza_resources/en/ner",
"ns_data/stanza_resources/en/sentiment",
"ns_data/stanza_resources/en/default.zip",
"ns_data/stanza_resources/zh-hans",
"ns_data/cache",
"ns_data/settings.ini",
]

# Ruff complete options: https://docs.astral.sh/ruff/settings/#extend
[tool.ruff]
line-length = 112

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = ["E501", "B011"]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
ignore_missing_imports = true
